--- a/results.html
+++ b/results.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/i18next/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-http-backend/i18nextHttpBackend.min.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
+    <script type="module" src="scripts/navbar.js"></script>
 
     <script>
         // Tailwind config
@@ -121,6 +122,9 @@
 </head>
 <body class="bg-gray-100 font-sans antialiased text-gray-800">
     <div class="max-w-6xl mx-auto p-4 md:p-8 relative">
+        <!-- Navigation Bar -->
+        <div data-include-nav data-active="history" data-language="switcher"></div>
+
         <!-- Error Container -->
         <div id="error-container" class="hidden bg-red-100 p-6 rounded-lg shadow-lg text-red-700 font-medium"></div>
         <!-- Loading Indicator -->
@@ -128,26 +132,6 @@
 
         <!-- Main Content (hidden initially) -->
         <div id="main-content" class="opacity-0">
-            <!-- Navigation Bar -->
-            <nav class="mb-6 flex flex-wrap justify-between items-center bg-white p-3 rounded-lg shadow-sm gap-4">
-                 <a href="index.html" class="text-xl font-bold text-indigo-600" data-i18n="nav.title">Pistacho评分</a>
-                 <!-- Nav Links -->
-                 <div class="flex items-center space-x-4 flex-grow justify-center md:justify-start md:flex-grow-0 order-3 md:order-2 w-full md:w-auto">
-                     <a href="index.html" class="text-gray-600 hover:text-indigo-600" data-i18n="nav.community">社区动态</a>
-                     <a href="rate.html" class="text-gray-600 hover:text-indigo-600" data-i18n="nav.rate">去评分</a>
-                     <a href="history.html" class="text-gray-600 hover:text-indigo-600" data-i18n="nav.myRatings">我的评分</a>
-                     <a href="certified.html" class="text-gray-600 hover:text-indigo-600" data-i18n="nav.certified">认证评分</a>
-                 </div>
-                 <!-- Language Switcher & Login Status -->
-                 <div class="flex items-center order-2 md:order-3">
-                    <select id="language-switcher" class="text-xs p-1 rounded border border-gray-300 mr-2" style="height: 30px; line-height: 1.5;">
-                        <option value="zh">简体中文</option>
-                        <option value="en">English</option>
-                        <option value="es">Español</option>
-                    </select>
-                    <div id="login-status-container" class="flex items-center"></div>
-                 </div>
-            </nav>
 
             <!-- Main Layout: Image Gallery + Details -->
             <div class="flex flex-col md:flex-row gap-6 md:gap-8 mb-8">
@@ -371,6 +355,11 @@
                 }
             });
         }
+
+        document.addEventListener('navbar:loaded', () => {
+            setupLanguageSwitcher();
+            renderLoginStatus(currentAuthUser);
+        });
 
         // --- Authentication ---
         // Redirects to Authing for login
